<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>gx-flow</artifactId>
	<name>Graphenee UI (Vaadin Flow)</name>
	<description>Flow UI components for Graphenee Framework</description>

	<!-- Parent -->
	<parent>
		<groupId>com.trigsoft.graphenee</groupId>
		<artifactId>gx</artifactId>
		<version>4.0.0-SNAPSHOT</version>
		<relativePath>..</relativePath>
	</parent>

	<!-- Properties -->
	<properties>
		<java.version>21</java.version>
		<version.vaadin>24.8.4</version.vaadin>
		<version.vaadin.plugin>24.8.4</version.vaadin.plugin>
	</properties>

	<!-- Repositories -->
	<repositories>
		<repository>
			<id>vaadin-addons</id>
			<url>https://maven.vaadin.com/vaadin-addons/</url>
		</repository>
	</repositories>

	<!-- Dependency Management -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-core</artifactId>
				<version>${version.vaadin}</version>
			</dependency>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-spring-boot-starter</artifactId>
				<version>${version.vaadin}</version>
			</dependency>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-app-layout-flow</artifactId>
				<version>${version.vaadin}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Dependencies -->
	<dependencies>
		<dependency>
			<groupId>com.vaadin</groupId>
			<!-- Replace artifactId with vaadin-core to use only free components -->
			<artifactId>vaadin-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.vaadin.addons.componentfactory</groupId>
			<artifactId>vcf-pdf-viewer</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-app-layout-flow</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.appreciated</groupId>
			<artifactId>apexcharts</artifactId>
			<version>23.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.trigsoft.graphenee</groupId>
			<artifactId>gx-util</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.flowingcode.vaadin.addons</groupId>
			<artifactId>twincolgrid</artifactId>
			<version>2.9.5</version>
		</dependency>
		<dependency>
			<groupId>io.reactivex.rxjava3</groupId>
			<artifactId>rxjava</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
		</dependency>
	</dependencies>

</project>